# non_linear_observers

./: .gitignore
Le 3/: EKF.m  EKF_sr.m  EKF_sr_new.m  plot_error.m  plot_path.m
Le 3/UKF/: RunMe.m  plot_error.m  ukf_example.m
Le 3/sceliton/: task1.ipynb  task1.m  task1_sr.m
Le1/: Untitled2.m  epl_beta.m  le1_1.m  le1_2315.m  le1_2316.m  le1_4.m  le1_6.m  le6_code.tex  le_4_1_7.m  le_4_1_7.mlx  le_4_1_7.tex  le_4_1_8.m  le_4_1_8.mlx  le_4_1_8.tex  le_4_3_4.mlx  le_4_3_4.tex  results.mat
Le1/le_4_3_4_images/: figure_0.eps
Le2/: Le2_2.m  Le2_2.mlx  Le2_3.m  Le2_4.mlx  Le2_4.tex  Le2_5.m  Le2_6.m  Le2_8.m  Le2_8.mlx
Le2/html/: Le2_6.html  Le2_6.tex  Le2_6_01.eps
Le3/: Derivative.mlx  EKF.m  RunMe.m  sim_robot.m
Le3/UKF/: EKF.m  plot_path.m  ukf.m  ukf_example.m
Le3/sceliton/: EKF.m  EKF_ma5tlab.m  EKF_sr.m  task1.m
Le4/: EKF.m  Le4_1.m  Le4_2.m  Le4_3.m  resample.m
Le5/: RunMe.m  RunMe_EKF.m  RunMe_KF.m  derivatives.mlx
Proj/: Reindl.mlx  SOC_estimation.m  SplineInterpol.m  load_SOC_data.m  spline_der.m
Proj/Cpp_codes/interp_example/interp_example/: CMakeLists.txt  interp.h  plot_test.py  test_interp1.cc
Proj/EKF_BatterySOCEstimation_CPP/: CMakeLists.txt  interp.cc  plot_EKF_test.py  plot_test.py  result.json  test_EKF.cc  test_interp1.cc
Proj/EKF_CPP_impl/CPP_files/: CMakeLists.txt  simdata.json  test_EKF.cc
Proj/bat_soc_est_simulink/: BatterySOCEstimation.slx  BatterySOCEstimationExample.m
Proj/battery_sim_data/: cyc_data.mat  ocv_data.mat  sim_battery_mdl.m  simple_battery_mdl_cycle.slx  simple_battery_mdl_pulses.slx  simple_battery_mdl_pulses_test.slx
doc/: main.tex
doc/chapter2/: le2_1.tex  le2_2.tex  le2_3.tex  le2_4.tex  le2_5.tex  le2_6.tex  le2_7.tex  (+1 more)
(+32 files in other folders)
